<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"
        android:layout_height="146dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="555dp"
        android:contentDescription="@string/foto"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="145dp"
        android:layout_height="31dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="653dp"
        android:text="@string/stephan_guimaraes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailid"
        android:layout_width="229dp"
        android:layout_height="31dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="607dp"
        android:text="@string/stephan_guimaraess_gmail_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/nome"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/idade"
        android:layout_width="73dp"
        android:layout_height="26dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="557dp"
        android:text="@string/idade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/emailid"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/preferences"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="22dp"
        android:text="@string/preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/proximidade"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="349dp"
        android:text="@string/locais_proximos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferences"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="411dp"
        android:layout_height="251dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proximidade"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="267dp"
        android:layout_height="36dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

</androidx.constraintlayout.widget.ConstraintLayout>